[package]
name = "interpreter"
version = "0.1.0"
authors = ["0918nobita <nobita.0918@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
interp-core = { path = "../interp-core" }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
