[package]
name = "interpreter"
version = "0.1.0"
authors = ["0918nobita <nobita.0918@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
interp-core = { path = "../interp-core" }
js-sys = "0.3"
wasm-bindgen = "0.2"
