[package]
name = "interpreter"
version = "0.1.0"
authors = ["0918nobita <nobita.0918@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
interp-core = { path = "../interp-core" }
js-sys = "0.3"
serde = "1.0.104"
serde_json = "1.0.45"

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]
